Bug 212406 - plasma folderview dragndrop drag and drop segfault thx
Summary: plasma folderview dragndrop drag and drop segfault thx
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 202422 207872 212256 221444 221709 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-10-30 15:51 UTC by nospam
Modified: 2010-01-07 23:47 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nospam 2009-10-30 15:51:18 UTC
Application that crashed: plasma-desktop
Version of the application: 0.3
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-14-generic i686
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
I've hovered over my "Home" folder, and tried to drag out a subfolder from the just opened folderview to my desktop. I don't exactly know whether I released my mouse button or not, but the whole screen went black, plasma died because of it's widget... fortunately it came back, and asked me to send this bugreport (after installing a few mbytes of dbg :) ) 

Thanks for your work and have a nice day. :)

 -- Backtrace:
Application: Plasma Workspace (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb77e1700 (LWP 2261))]

Thread 2 (Thread 0xac0b8b70 (LWP 2263)):
#0  0x0046f422 in __kernel_vsyscall ()
#1  0x00c17e15 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:122
#2  0x008fc78d in __pthread_cond_wait (cond=0xa429c50, mutex=0xa429c38) at forward.c:139
#3  0x00d0be67 in QWaitConditionPrivate::wait (this=0xa53ae88, mutex=0xa53ae84, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#4  QWaitCondition::wait (this=0xa53ae88, mutex=0xa53ae84, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#5  0x050f4922 in QHostInfoAgent::run (this=0xa53ae78) at kernel/qhostinfo.cpp:260
#6  0x00d0ae32 in QThreadPrivate::start (arg=0xa53ae78) at thread/qthread_unix.cpp:188
#7  0x00c1380e in start_thread (arg=0xac0b8b70) at pthread_create.c:300
#8  0x008ef7ee in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb77e1700 (LWP 2261)):
[KCrash Handler]
#6  IconView::popupVisible (this=0xac8efb0) at ../../../../../apps/plasma/applets/folderview/iconview.cpp:1202
#7  0x033abbd9 in QWidget::event (this=0xac8efb0, event=0xbfa939d4) at kernel/qwidget.cpp:7743
#8  0x03356f54 in QApplicationPrivate::notify_helper (this=0x99fe728, receiver=0xac8efb0, e=0xbfa939d4) at kernel/qapplication.cpp:4056
#9  0x0335ebac in QApplication::notify (this=0x99d78e0, receiver=0xac8efb0, e=0xbfa939d4) at kernel/qapplication.cpp:4009
#10 0x010c1bfa in KApplication::notify (this=0x99d78e0, receiver=0xac8efb0, event=0xbfa939d4) at ../../kdeui/kernel/kapplication.cpp:302
#11 0x00dfb6cb in QCoreApplication::notifyInternal (this=0x99d78e0, receiver=0xac8efb0, event=0xbfa939d4) at kernel/qcoreapplication.cpp:610
#12 0x033da48a in QCoreApplication::sendEvent (this=0x9a02008, w=0xac8efb0, xe=0xbfa93a3c) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#13 QX11Data::xdndHandleLeave (this=0x9a02008, w=0xac8efb0, xe=0xbfa93a3c) at kernel/qdnd_x11.cpp:1069
#14 0x033da609 in qt_xdnd_send_leave () at kernel/qdnd_x11.cpp:1106
#15 0x033dc544 in QDragManager::move (this=0xad1fc78, globalPos=...) at kernel/qdnd_x11.cpp:1585
#16 0x033e082f in QDragManager::eventFilter (this=0xad1fc78, o=0xac8f870, e=0xbfa94020) at kernel/qdnd_x11.cpp:1296
#17 0x00dfa8fc in QCoreApplicationPrivate::sendThroughApplicationEventFilters (this=0x99fe728, receiver=0xac8f870, event=0xbfa94020) at kernel/qcoreapplication.cpp:707
#18 0x03356ed3 in QApplicationPrivate::notify_helper (this=0x99fe728, receiver=0xac8f870, e=0xbfa94020) at kernel/qapplication.cpp:4031
#19 0x0335f033 in QApplication::notify (this=0x99d78e0, receiver=0xac8f870, e=0xbfa94020) at kernel/qapplication.cpp:3758
#20 0x010c1bfa in KApplication::notify (this=0x99d78e0, receiver=0xac8f870, event=0xbfa94020) at ../../kdeui/kernel/kapplication.cpp:302
#21 0x00dfb6cb in QCoreApplication::notifyInternal (this=0x99d78e0, receiver=0xac8f870, event=0xbfa94020) at kernel/qcoreapplication.cpp:610
#22 0x0335df6e in QCoreApplication::sendSpontaneousEvent (receiver=0xac8f870, event=0xbfa94020, alienWidget=0x0, nativeWidget=0xac8f870, buttonDown=0x3bd1aa0, lastMouseReceiver=...)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#23 QApplicationPrivate::sendMouseEvent (receiver=0xac8f870, event=0xbfa94020, alienWidget=0x0, nativeWidget=0xac8f870, buttonDown=0x3bd1aa0, lastMouseReceiver=...) at kernel/qapplication.cpp:2924
#24 0x033cc7c0 in QETWidget::translateMouseEvent (this=0xac8f870, event=0xbfa9566c) at kernel/qapplication_x11.cpp:4409
#25 0x033cbc4b in QApplication::x11ProcessEvent (this=0x99d78e0, event=0xbfa9566c) at kernel/qapplication_x11.cpp:3428
#26 0x033f8502 in x11EventSourceDispatch (s=0x9a00ea8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#27 0x00b66e78 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#28 0x00b6a720 in ?? () from /lib/libglib-2.0.so.0
#29 0x00b6a853 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#30 0x00e2602c in QEventDispatcherGlib::processEvents (this=0x99fe518, flags=...) at kernel/qeventdispatcher_glib.cpp:327
#31 0x033f7be5 in QGuiEventDispatcherGlib::processEvents (this=0x99fe518, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#32 0x00df9c79 in QEventLoop::processEvents (this=0xab66438, flags=) at kernel/qeventloop.cpp:149
#33 0x00dfa0ca in QEventLoop::exec (this=0xab66438, flags=...) at kernel/qeventloop.cpp:201
#34 0x033e0168 in QDragManager::drag (this=0xad1fc78, o=0xacff3b0) at kernel/qdnd_x11.cpp:1969
#35 0x0336a3fe in QDrag::exec (this=0xacff3b0, supportedActions=..., defaultDropAction=Qt::IgnoreAction) at kernel/qdrag.cpp:282
#36 0x0336a4b4 in QDrag::exec (this=0xacff3b0, supportedActions=...) at kernel/qdrag.cpp:239
#37 0x06b9e6e8 in IconView::startDrag (this=0xacc2bc8, pos=..., widget=0xacde5a8) at ../../../../../apps/plasma/applets/folderview/iconview.cpp:2154
#38 0x06b9ea40 in IconView::mouseMoveEvent (this=0xacc2bc8, event=0xbfa96640) at ../../../../../apps/plasma/applets/folderview/iconview.cpp:1680
#39 0x039628e8 in QGraphicsItem::sceneEvent (this=0xacc2bd0, event=0xbfa96640) at graphicsview/qgraphicsitem.cpp:5024
#40 0x039af9ef in QGraphicsWidget::sceneEvent (this=0xacc2bc8, event=0xbfa96640) at graphicsview/qgraphicswidget.cpp:1110
#41 0x03984e14 in QGraphicsScenePrivate::sendEvent (this=0xaac28f8, item=0xacc2bd0, event=0xbfa96640) at graphicsview/qgraphicsscene.cpp:1159
#42 0x03986443 in QGraphicsScenePrivate::sendMouseEvent (this=0xaac28f8, mouseEvent=0xbfa96640) at graphicsview/qgraphicsscene.cpp:1230
#43 0x039914ad in QGraphicsScene::mouseMoveEvent (this=0xac4cde0, mouseEvent=0xbfa96640) at graphicsview/qgraphicsscene.cpp:4419
#44 0x03992fc7 in QGraphicsScene::event (this=0xac4cde0, event=0xbfa96640) at graphicsview/qgraphicsscene.cpp:3802
#45 0x03356f54 in QApplicationPrivate::notify_helper (this=0x99fe728, receiver=0xac4cde0, e=0xbfa96640) at kernel/qapplication.cpp:4056
#46 0x0335e67c in QApplication::notify (this=0x99d78e0, receiver=0xac4cde0, e=0xbfa96640) at kernel/qapplication.cpp:3603
#47 0x010c1bfa in KApplication::notify (this=0x99d78e0, receiver=0xac4cde0, event=0xbfa96640) at ../../kdeui/kernel/kapplication.cpp:302
#48 0x00dfb6cb in QCoreApplication::notifyInternal (this=0x99d78e0, receiver=0xac4cde0, event=0xbfa96640) at kernel/qcoreapplication.cpp:610
#49 0x0399fe9f in QCoreApplication::sendEvent (this=0xacc0b70, event=0xbfa96cd0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#50 QGraphicsViewPrivate::mouseMoveEventHandler (this=0xacc0b70, event=0xbfa96cd0) at graphicsview/qgraphicsview.cpp:605
#51 0x039a4d83 in QGraphicsView::mouseMoveEvent (this=0xaa7d220, event=0xbfa96cd0) at graphicsview/qgraphicsview.cpp:3321
#52 0x033abe63 in QWidget::event (this=0xaa7d220, event=0xbfa96cd0) at kernel/qwidget.cpp:7534
#53 0x0375b633 in QFrame::event (this=0xaa7d220, e=0xbfa96cd0) at widgets/qframe.cpp:559
#54 0x037fa494 in QAbstractScrollArea::viewportEvent (this=0xbfa939d4, e=0x0) at widgets/qabstractscrollarea.cpp:962
#55 0x039a451f in QGraphicsView::viewportEvent (this=0xaa7d220, event=0xbfa96cd0) at graphicsview/qgraphicsview.cpp:2919
#56 0x037fca95 in QAbstractScrollAreaPrivate::viewportEvent (this=0x99d7cf0, o=0xacde5a8, e=0xbfa96cd0) at widgets/qabstractscrollarea_p.h:100
#57 QAbstractScrollAreaFilter::eventFilter (this=0x99d7cf0, o=0xacde5a8, e=0xbfa96cd0) at widgets/qabstractscrollarea_p.h:111
#58 0x00dfa83a in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x99fe728, receiver=0xacde5a8, event=0xbfa96cd0) at kernel/qcoreapplication.cpp:726
#59 0x03356f2c in QApplicationPrivate::notify_helper (this=0x99fe728, receiver=0xacde5a8, e=0xbfa96cd0) at kernel/qapplication.cpp:4052
#60 0x0335f033 in QApplication::notify (this=0x99d78e0, receiver=0xacde5a8, e=0xbfa96cd0) at kernel/qapplication.cpp:3758
#61 0x010c1bfa in KApplication::notify (this=0x99d78e0, receiver=0xacde5a8, event=0xbfa96cd0) at ../../kdeui/kernel/kapplication.cpp:302
#62 0x00dfb6cb in QCoreApplication::notifyInternal (this=0x99d78e0, receiver=0xacde5a8, event=0xbfa96cd0) at kernel/qcoreapplication.cpp:610
#63 0x0335df6e in QCoreApplication::sendSpontaneousEvent (receiver=0xacde5a8, event=0xbfa96cd0, alienWidget=0xacde5a8, nativeWidget=0xa9a44c0, buttonDown=0x3bd1aa0, lastMouseReceiver=...)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#64 QApplicationPrivate::sendMouseEvent (receiver=0xacde5a8, event=0xbfa96cd0, alienWidget=0xacde5a8, nativeWidget=0xa9a44c0, buttonDown=0x3bd1aa0, lastMouseReceiver=...)
    at kernel/qapplication.cpp:2924
#65 0x033cc7c0 in QETWidget::translateMouseEvent (this=0xa9a44c0, event=0xbfa9831c) at kernel/qapplication_x11.cpp:4409
#66 0x033cbc4b in QApplication::x11ProcessEvent (this=0x99d78e0, event=0xbfa9831c) at kernel/qapplication_x11.cpp:3428
#67 0x033f8502 in x11EventSourceDispatch (s=0x9a00ea8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#68 0x00b66e78 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#69 0x00b6a720 in ?? () from /lib/libglib-2.0.so.0
#70 0x00b6a853 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#71 0x00e2602c in QEventDispatcherGlib::processEvents (this=0x99fe518, flags=...) at kernel/qeventdispatcher_glib.cpp:327
#72 0x033f7be5 in QGuiEventDispatcherGlib::processEvents (this=0x99fe518, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#73 0x00df9c79 in QEventLoop::processEvents (this=0xbfa98614, flags=) at kernel/qeventloop.cpp:149
#74 0x00dfa0ca in QEventLoop::exec (this=0xbfa98614, flags=...) at kernel/qeventloop.cpp:201
#75 0x00dfc53f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#76 0x03356dd7 in QApplication::exec () at kernel/qapplication.cpp:3525
#77 0x0217c80d in kdemain (argc=1, argv=0x99b7c50) at ../../../../plasma/shells/desktop/main.cpp:50
#78 0x0804dde1 in launch (argc=<value optimized out>, _name=<value optimized out>, args=<value optimized out>, cwd=0x0, envc=0, envs=0x99c3568 "", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x80511a5 "0") at ../../kinit/kinit.cpp:677
#79 0x0804ea35 in handle_launcher_request (sock=<value optimized out>, who=<value optimized out>) at ../../kinit/kinit.cpp:1169
#80 0x0804eeac in handle_requests (waitForPid=<value optimized out>) at ../../kinit/kinit.cpp:1362
#81 0x0804fbaf in main (argc=2, argv=0xbfa98e74, envp=0xbfa98e80) at ../../kinit/kinit.cpp:1793

Reported using DrKonqi
Comment 1 Dario Andres 2009-11-06 03:31:52 UTC
From bug 212256:
---
What I was doing when the application crashed:
when i move various photos to a file, after i move that file to other file (
all with the mouse ), in this moment plasma crashed ... i think than the crash
was caused by the little windows than it's open at put the mouse up there file
... sorry but my english dont is so good :P

--- 

I wonder if this could also be related to bug 207872

Thanks
Comment 2 Dario Andres 2009-11-06 03:31:57 UTC
*** Bug 212256 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2009-11-06 03:32:58 UTC
*** Bug 202422 has been marked as a duplicate of this bug. ***
Comment 4 Beat Wolf 2009-11-09 13:30:04 UTC
*** Bug 207872 has been marked as a duplicate of this bug. ***
Comment 5 Fredrik Höglund 2009-12-12 17:21:18 UTC
SVN commit 1061663 by fredrik:

Fix a crash in the popup view during drag and drop.

Based on the backtrace in bug 207872, which is marked as a duplicate
of bug 212406.

BUG: 212406


 M  +1 -1      popupview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1061663
Comment 6 Fredrik Höglund 2010-01-05 23:46:24 UTC
*** Bug 221444 has been marked as a duplicate of this bug. ***
Comment 7 Jonathan Thomas 2010-01-07 23:47:13 UTC
*** Bug 221709 has been marked as a duplicate of this bug. ***