Fix a crash in the popup view during drag and drop.

Based on the backtrace in bug 207872, which is marked as a duplicate
of bug 212406.

BUG: 212406

svn path=/trunk/KDE/kdebase/apps/; revision=1061663